<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_title_bottom_sheet"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:text="@string/user_data"
            android:textColor="@color/white_text"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="Masukkan data penghuni berikut ini"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/username"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etUsername"
                style="@style/EditText"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_guest"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/phone"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etPhone"
                style="@style/EditText"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_phone"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/address"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etAddress"
                style="@style/EditText"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_location"
                android:hint="@string/address"
                android:imeOptions="actionNext"
                android:inputType="textPostalAddress|textMultiLine"
                android:singleLine="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/email"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etEmail"
                style="@style/EditText"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_message"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/password"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etPassword"
                style="@style/EditText"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_unlock"
                android:hint="@string/password"
                android:imeOptions="actionSend"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddUser"
            style="@style/ButtonStyle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/add_user"
            app:backgroundTint="@color/primary" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgDismiss"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14dp"
        android:padding="7dp"
        android:src="@drawable/ic_close"
        app:tint="@color/white" />

</RelativeLayout>