<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_title_bottom_sheet"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:text="@string/exit_portal"
            android:textColor="@color/white_text"
            android:textSize="18sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/guest_name"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="end"
                        android:singleLine="true"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/time_entry"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvTimestamp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="end"
                        android:singleLine="true"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/keperluan"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/guest_image"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imgGuest"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_edit_text_normal"
                    android:scaleType="centerCrop"
                    android:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnOpenGate"
                    style="@style/ButtonStyle"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/open_portal"
                    app:backgroundTint="@color/primary" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgDismiss"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14dp"
        android:padding="7dp"
        android:src="@drawable/ic_close"
        app:tint="@color/white" />

</RelativeLayout>