<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_title_bottom_sheet"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:text="@string/guest_data"
            android:textColor="@color/white_text"
            android:textSize="18sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/guest_name"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:endIconMode="clear_text"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/etUsername"
                        style="@style/EditText"
                        android:layout_marginTop="4dp"
                        android:hint="Contoh: Rahmat"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapWords"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/keperluan"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:endIconMode="clear_text"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/etDesc"
                        style="@style/EditText"
                        android:layout_marginTop="4dp"
                        android:gravity="top"
                        android:hint="Contoh: Kurir antar paket"
                        android:inputType="textMultiLine|textCapSentences"
                        android:minLines="2" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/guest_image"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_edit_text_normal">

                    <ImageView
                        android:id="@+id/imgGuest"
                        android:layout_width="match_parent"
                        android:layout_height="320dp"
                        android:scaleType="centerCrop"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/imgCapture"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerInParent="true"
                        android:layout_marginVertical="16dp"
                        android:padding="4dp"
                        android:src="@drawable/ic_camera"
                        app:tint="@color/secondary_text" />
                </RelativeLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAddGuest"
                    style="@style/ButtonStyle"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/add_guest"
                    app:backgroundTint="@color/primary" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgDismiss"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14dp"
        android:padding="7dp"
        android:src="@drawable/ic_close"
        app:tint="@color/white" />

</RelativeLayout>